Fix import floater break on scroll

--- a/styles/ImportFloater.module.css
+++ b/styles/ImportFloater.module.css
@@ -1,9 +1,10 @@
 .background {
-    position: absolute;
+    position: fixed;
+    z-index: 1;
     background-color: rgba(0, 0, 0, 0.5);
     top: 0;
+    bottom: 0;
     left: 0;
-    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
